# Vatics-webcam

./: .main.cpp.swm  .main.cpp.swo  .main.cpp.swp  .nfs00000000001c33f900000001  .rebuild.sh.swo  CMakeLists.txt  CrossCompile_toolchain.cmake  makefile  putVatics.sh  rebuild.sh  rebuild_cmake.sh  test_
build_ade_vienna/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: IMX307.h  adlr064.h  constants.h  dbm.h  main.h  net.h  spi.h  ulis_encode.h  version.h
include/MsgBroker/: msg_broker.h
include/TextRender/: text_render.h
include/avi_reader/: avi_parser.h  avi_types.h
include/comm/: video_buf.h  vmf_log.h
include/mp4container/: mp4container.h
include/rtspc/: rtspc_common.h
include/rtsps/: RtpMapInfo.h
include/vmf/: audio_aac4enc.h  config_asc.h  config_awb.h  config_fec.h  config_isp.h  config_ivs.h  config_osd.h  config_vi.h  fec_layout.h  memset_2d.h  resize.h  source_connect.h  vector_dma.h  video_bind.h  video_display_mechanism.h  video_encoder_adjust.h  video_encoder_output_srb.h  video_output.h  video_source_process_md.h
leptop_sdk/: FLIR_I2C.c  libMPSSE_definitions.c  libMPSSE_i2c.h
modules/MsgBroker/: msg_broker.c
modules/apps/: CMakeLists.txt
modules/apps/audio_detection/: CMakeLists.txt  README  audio_detect.cpp  audio_detect_msg_sender.cpp
modules/apps/playback_example/: CMakeLists.txt  playback_example_mmap.cpp  playback_file_mmap.cpp
modules/apps/snd_playback/: snd_playback.cpp
modules/apps/tinyaenc/: CMakeLists.txt  aenc_msg_format.h  aenc_msg_sender.cpp  tiny_aenc_mmap.cpp
modules/apps/two_way_audio/: CMakeLists.txt  audio_client_mmap.cpp  audio_server_mmap.cpp  audio_setting.cpp  audio_setting.h
modules/apps/uac/: CMakeLists.txt  uac_service.cpp
modules/apps/volume_ctrl/: CMakeLists.txt  volume_ctrl.cpp
modules/audiotk/: CMakeLists.txt  audio_capture_mmap.c  audio_capture_mmap.h  audio_common.h  audio_encoder.c  audio_encoder.h  audio_playback_mmap.c  audio_playback_mmap.h  audio_vol_ctrl.c  audio_vol_ctrl.h  fdk_aac_processor.h
modules/build_vienna/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
modules/build_vienna/MsgBroker/: Makefile  cmake_install.cmake
modules/build_vienna/apps/: Makefile  cmake_install.cmake
modules/build_vienna/apps/playback_example/: Makefile  cmake_install.cmake
modules/build_vienna/apps/snd_playback/: Makefile  cmake_install.cmake
modules/build_vienna/apps/tinyaenc/: Makefile  cmake_install.cmake
modules/build_vienna/apps/two_way_audio/: Makefile  cmake_install.cmake
modules/build_vienna/apps/uac/: Makefile  cmake_install.cmake
modules/build_vienna/apps/volume_ctrl/: Makefile  cmake_install.cmake
modules/build_vienna/audiotk/: Makefile  cmake_install.cmake
modules/build_vienna/open_source_3rd/: Makefile  cmake_install.cmake
modules/install_temp_open_src_3rd/lib/: libfdk-aacenc.so.0  libfdk-aacenc.so.0.1.5  libopencore-amrnb.la  libopencore-amrwb.so.0.0.3
modules/libs/vienna/: libatk_audio_utils_mmap.so.1.0.0.0
modules/open_source_3rd/: CMakeLists.txt
modules/open_source_3rd/fdk-aac/: CMakeLists.txt
modules/open_source_3rd/g711/: CMakeLists.txt
modules/open_source_3rd/g711/include/: G711SEnc.h
modules/open_source_3rd/g726/: CMakeLists.txt
modules/open_source_3rd/g726/include/: G726SEnc.h
modules/open_source_3rd/iniparser/: CMakeLists.txt  README  iniparser.tar.bz2
modules/open_source_3rd/opencore-amr/: CMakeLists.txt
pi_mobile/axclib/: ADEThermal_SDK.h  CAxcAutoLock.h  CAxcBase64.h  CAxcBaseResource.h  CAxcCRC.h  CAxcChain.h  CAxcEvent.h  CAxcFifo.h  CAxcFifoBufferPtr.h  CAxcFile.h  CAxcFileSystem.h  CAxcList.h  CAxcListStruct.h  CAxcLog.h  CAxcMD5.h  CAxcMemory.h  CAxcMutex.h  CAxcSocket.h  CAxcString.h  CAxcSystem.h  CAxcThread.h  CAxcTime.h  CAxcTree.h  CAxcUtility.h  axclib.h  axclib_data_type.h  axclib_default.h  axclib_os_check.h  axclib_os_include.h
pi_mobile/src/: FpsHelper.cpp  FpsHelper.h  RingBuffer.cpp  RingBuffer.h  XStreamParse.cpp  XStreamParse.h  adeSDKAPIleptonthermal.cpp  adeSDKAPIleptonthermal.h  adeWatchdog.cpp  adeWatchdog.h  adhfpluginloader.cpp  adhfpluginloader.h  globaldef.cpp  globaldef.h  glogdbgzone.h  heatfinderMonitor.cpp  heatfinderMonitor.h  heatfinderapp.cpp  heatfinderapp.h  heatfinderbroadcast.cpp  heatfinderbroadcast.h  heatfinderconfigmanager.cpp  heatfinderconfigmanager.h  heatfinderleptoncapture.cpp  heatfinderleptoncapture.h  heatfinderlogmanager.cpp  heatfinderlogmanager.h  heatfindersystemsignalmanager.cpp  heatfindersystemsignalmanager.h  heatfindertcplistener.cpp  heatfindertcplistener.h  heatfindertimer.cpp  heatfindertimer.h  heatfinderudpmediaclient.cpp  heatfinderudpmediaclient.h  heatfinderudpsend.cpp  heatfinderudpsend.h  heatfindervisionRawcapture.cpp  heatfindervisionRawcapture.h  heatfindervisioncapture.cpp  (+12 more)
sqlite3_arm/lib/: libsqlite3.la
sqlite3_arm/lib/pkgconfig/: sqlite3.pc
src/: VaticsFirmwork.cpp  adlr064.cpp  dbm.cpp  imx307.cpp  main.cpp  net.cpp  spi.cpp  ulis_encode.cpp
vtcs_root_vienna/include/MemBroker/: mem_broker.h
vtcs_root_vienna/include/SyncRingBuffer/: sync_ring_buffer.h
vtcs_root_vienna/include/avi_reader/: avi_reader.h  avi_utils.h
vtcs_root_vienna/include/avicontainer/: avicontainer.h
vtcs_root_vienna/include/c_utils/: doubly_linked_list.h
vtcs_root_vienna/include/comm/: frame_info.h
vtcs_root_vienna/include/datacrypto/: data_crypto.h
vtcs_root_vienna/include/rtspc/: RtspClnt.h  ubuffer.h
vtcs_root_vienna/include/rtsps/: LiveMediaSink.h  LiveMediaSrc.h  RtpDataInfo.h  RtspSrvr.h
vtcs_root_vienna/include/vmf/: config_ae.h  config_ifp.h  config_vsrc.h  ssm_info.h  sync_shared_memory.h  video_decoder.h  video_encoder.h  video_snapshot_mechanism.h  video_source.h
vtcs_root_vienna/lib/: libc_utils.so.1.0.0.0  libdce.so.1.0.0.0  libfreetype.so.6.13.0  libmembroker.so.1.0.0.0  libmsgbroker.so.1.0.0.0  libortsp.so.1.0.0.0  librtspclnt.so.1.0.0.0  librtspsrvr.so.9  librtspsrvr.so.9.0.0.4  libsyncringbuffer.so.1.0.0.0  libtextrender.so.1.0.0.0  libvmf.so.3  libvmf.so.3.0.0.0  libvmf_vdec.so.1  libvmf_vdec.so.1.0.0.0
(+226 files in other folders)
