SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s -Werror")
SET(ATU 0)
ADD_SUBDIRECTORY(tinyaenc)
ADD_SUBDIRECTORY(volume_ctrl)
ADD_SUBDIRECTORY(playback_example)
ADD_SUBDIRECTORY(snd_playback)
ADD_SUBDIRECTORY(two_way_audio)
IF(ATU)
	ADD_SUBDIRECTORY(audio_detection)
ENDIF(ATU)
ADD_SUBDIRECTORY(uac)
# ADD_SUBDIRECTORY(ceva_example)