INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/.. ${OPEN_SRC_3RD_INSTALL_DIR}/include)
LINK_DIRECTORIES(${OPEN_SRC_3RD_INSTALL_DIR}/lib)

#### Control the clock type in the audio capture. ####
#ADD_DEFINITIONS(-DUSE_WALL_CLOCK)

#### For audio libraries ####

SET(SRC_LIST audio_capture_mmap.c audio_vol_ctrl.c audio_playback_mmap.c)
SET(TARGET_NAME atk_audio_utils_mmap)
ADD_LIBRARY(${TARGET_NAME} SHARED ${SRC_LIST})
TARGET_LINK_LIBRARIES(${TARGET_NAME} asound)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES SOVERSION 1 VERSION 1.0.0.0)
ADD_DEPENDENCIES(${TARGET_NAME} alsa-lib_target)
IF(CMAKE_BUILD_TYPE STREQUAL "Release")
	ADD_CUSTOM_COMMAND(TARGET ${TARGET_NAME} POST_BUILD COMMAND ${CMAKE_STRIP} --strip-unneeded $<TARGET_FILE:${TARGET_NAME}>
		COMMENT "Stripping shared library")
ENDIF()

SET(SRC_LIST audio_encoder.c)
SET(TARGET_NAME atk_encoder)
ADD_LIBRARY(${TARGET_NAME} STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(${TARGET_NAME} g711senc g726senc)

IF(GAMR_SUPPORT_ENABLE)
	ADD_DEFINITIONS("-DGAMR_SUPPORT")
ENDIF()

IF(AAC_HW_ENCODE_ENABLE)
	ADD_DEFINITIONS("-DHAS_HW_AAC_ENC")	
ELSE(AAC_HW_ENCODE_ENABLE)
	TARGET_LINK_LIBRARIES(${TARGET_NAME} fdk-aacenc)
ENDIF()

IF(GAMR_SUPPORT_ENABLE)
	TARGET_LINK_LIBRARIES(${TARGET_NAME} opencore-amrnb)
	ADD_DEPENDENCIES(${TARGET_NAME} opencore-amr_target)
ENDIF()
