#
# audio_detect : a simple audio detection application
#
SET(SRC_LIST audio_detect.cpp)
LIST(APPEND LINK_LIST vmf membroker msgbroker)

ADD_DEFINITIONS("-DDEBUG")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${VMF_PATH})
MESSAGE("${INCLUDE_DIRECTORIES}")
SET(TARGET_NAME audio_detect)
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LINK_LIST})

#
# audio_detect_msg_sender:
#
SET(SRC_LIST audio_detect_msg_sender.cpp)
SET(LINK_LIST msgbroker)

ADD_DEFINITIONS("-DDEBUG")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${VMF_PATH})
MESSAGE("${INCLUDE_DIRECTORIES}")
SET(TARGET_NAME audio_detect_msg_sender)
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LINK_LIST})
