
SET(SRC_LIST tiny_aenc_mmap.cpp)
SET(LINK_LIST atk_audio_utils_mmap msgbroker syncringbuffer atk_encoder membroker)

SET(SPKR_ENABLED 0)

IF(SPKR_ENABLED)
	ADD_DEFINITIONS("-DSPKR")
ENDIF(SPKR_ENABLED)

IF(SPKR_ENABLED OR AAC_HW_ENCODE_ENABLE)
	LIST(APPEND LINK_LIST vmf)
ENDIF(SPKR_ENABLED OR AAC_HW_ENCODE_ENABLE)

IF(GAMR_SUPPORT_ENABLE)
	ADD_DEFINITIONS("-DGAMR_SUPPORT")
	LIST(APPEND LINK_LIST opencore-amrnb)
ENDIF()

SET(TARGET_NAME tinyaenc_mmap)
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})
ADD_DEPENDENCIES(${TARGET_NAME} atk_audio_utils_mmap msgbroker)
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LINK_LIST})


IF(SPKR_ENABLED)
	SET(SRC_LIST aenc_msg_sender.cpp)
	SET(LINK_LIST msgbroker)

	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${VMF_PATH})
	SET(TARGET_NAME aenc_msg_sender)
	ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})
	TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LINK_LIST})
ENDIF(SPKR_ENABLED)
